@@ -215,7 +215,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Malaga>
+    <https://github.com/michal-josef-spacek/Map-Tube-Malaga>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
