@@ -6,6 +6,7 @@
  - Implement station order.
  - Rewrite XML map to new version with line IDs.
  - Update Module::Install to 1.21 version.
+ - Update author github username.
  - Update author name.
  - Update copyright years.
 
